src/objects/Community_Program_Opportunity__c.object
<CustomObject>
    <description>An opportunity to establish a Community Program</description>
    <fields>
        <fullName>Date_On_Hold__c</fullName>
        <description>The date the Stage field was set to &quot;On Hold&quot;</description>
        <inlineHelpText>The date the Stage field was set to &quot;On Hold&quot;</inlineHelpText>
        <label>Date On Hold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of this Community Program Lead</description>
        <inlineHelpText>A description of this Community Program Lead</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extension_End_Date__c</fullName>
        <description>The day this Community Program period has been extended to</description>
        <inlineHelpText>The day this Community Program period has been extended to</inlineHelpText>
        <label>Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <description>The day the Community Program period was originally scheduled to end. Specify an extension date in the &quot;Extension Deadline&quot; field</description>
        <inlineHelpText>The day the Community Program period was originally scheduled to end. Specify an extension date in the &quot;Extension Deadline&quot; field</inlineHelpText>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <description>The day the Community Program period starts</description>
        <inlineHelpText>The day the Community Program period starts</inlineHelpText>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <description>The date the RFP is due</description>
        <inlineHelpText>The date the RFP is due</inlineHelpText>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact who referred us to this Community Program Lead</description>
        <inlineHelpText>The Contact who referred us to this Community Program Lead</inlineHelpText>
        <label>Referred by - Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Community_Program_Lead_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Organization who referred us to this Community Program Opportunity</description>
        <inlineHelpText>The Organization who referred us to this Community Program Opportunity</inlineHelpText>
        <label>Referred by - Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Program Opportunities</relationshipLabel>
        <relationshipName>Community_Program_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <description>A helper field that stores the value from either the Referred by - Organization or Referred by - Contact field, depending on which one has a value</description>
        <formula>IF (ISBLANK(Referred_by_Organization__c) &amp;&amp; NOT(ISBLANK(Referred_by_Contact__c)),
   Referred_by_Contact__r.FirstName + &quot; &quot; + Referred_by_Contact__r.LastName,
/*ELSE*/
   Referred_by_Organization__r.Name
)</formula>
        <inlineHelpText>A helper field that stores the value from either the Referred by - Organization or Referred by - Contact field, depending on which one has a value</inlineHelpText>
        <label>Referred by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>The current stage of this Community Program Lead</description>
        <inlineHelpText>The current stage of this Community Program Lead</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Left message to call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of this Community Program Lead</description>
        <inlineHelpText>The Status of this Community Program Lead</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Program Opportunity</label>
    <nameField>
        <label>Community Program Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Program Opportunities</pluralLabel>
    <recordTypes>
        <fullName>Non_RFP</fullName>
        <active>true</active>
        <label>Non-RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>Program End Date must be greater than or equal to Program Start Date</description>
        <errorConditionFormula>Program_End_Date__c &lt; Program_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Program_End_Date__c</errorDisplayField>
        <errorMessage>Program End Date must be greater than or equal to Program Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_requires_Start_Date</fullName>
        <active>true</active>
        <description>Specifying a Program End Date requires a Program Start Date</description>
        <errorConditionFormula>ISBLANK(Program_Start_Date__c)
&amp;&amp; 
NOT(ISBLANK(Program_End_Date__c))</errorConditionFormula>
        <errorDisplayField>Program_Start_Date__c</errorDisplayField>
        <errorMessage>Specifying a Program End Date requires a Program Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extension_must_be_greater_than_End_Date</fullName>
        <active>true</active>
        <description>Specifying an Extension End Date requires a Program End Date. The Extension End Date must be greater than Program End Date</description>
        <errorConditionFormula>( 
   ISBLANK(Program_End_Date__c) &amp;&amp; 
   NOT(ISBLANK(Extension_End_Date__c)) 
) 
|| 
Extension_End_Date__c &lt;= Program_End_Date__c</errorConditionFormula>
        <errorDisplayField>Extension_End_Date__c</errorDisplayField>
        <errorMessage>Specifying an Extension End Date requires a Program End Date. The Extension End Date must be greater than Program End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referred_by_is_Contact_or_Organization</fullName>
        <active>true</active>
        <description>The Referred by field can only hold the lookup value of a Contact Name or Organization Name. This makes it possible to report on these values.</description>
        <errorConditionFormula>NOT(ISBLANK(Referred_by_Contact__c)) &amp;&amp; NOT(ISBLANK(Referred_by_Organization__c))</errorConditionFormula>
        <errorMessage>You may specify a Contact OR an Organization for the &quot;Referred by&quot; field, but not both. Please clear the value in either the &quot;Referred by - Contact&quot; field or the &quot;Referred by - Organization&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_requires_End_Date</fullName>
        <active>true</active>
        <description>Specifying a Program Start Date requires a Program End Date of an equal or later date.</description>
        <errorConditionFormula>NOT(ISBLANK(Program_Start_Date__c))
&amp;&amp;
ISBLANK(Program_End_Date__c)</errorConditionFormula>
        <errorDisplayField>Program_End_Date__c</errorDisplayField>
        <errorMessage>Specifying a Program Start Date requires a Program End Date of an equal or later date.</errorMessage>
    </validationRules>
</CustomObject>